cabal-version:   3.0
name:            panblog
version:         0.1.0.0
license:         BSD-3-Clause
license-file:    LICENSE
maintainer:      135e2@135e2.dev
author:          Mole Shang
build-type:      Simple
extra-doc-files: CHANGELOG.md

executable panblog
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Utils.Common
        Utils.Pandoc

    default-language: Haskell2010
    ghc-options:      -Wall -O3
    build-depends:
        base,
        text,
        containers,
        doctemplates,
        doclayout,
        filepath,
        directory,
        mtl,
        pandoc
